--- a/public/src/input.css
+++ b/public/src/input.css
@@ -5,22 +5,21 @@
 body {
     font-family: 'poppins', sans-serif;
 }
+body {
+    @apply bg-gray-900 text-white;
+}
 .navbar-fixed{
     @apply fixed z-[9999] bg-black bg-opacity-80;
     backdrop-filter: blur(5px);
     box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 1);
 }
 
-.humburger-line{
-    @apply w-[30px] h-[2px] my-2 block bg-primary;
+.fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
 }
-
-.hamburger-active > span:nth-child(1){
-    @apply  rotate-45;
-}
-.hamburger-active > span:nth-child(2){
-    @apply scale-0 ;
-}
-.hamburger-active > span:nth-child(3){
-    @apply  -rotate-45;
+.fade-in.appear {
+    opacity: 1;
+    transform: translateY(0);
 }
